--- a/style.css
+++ b/style.css
@@ -9,6 +9,13 @@ body {
     padding: 20px;
 }
 
+.flex-container2 {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    padding: 20px;
+}
+
 .grey {
     background-color: grey;
 
@@ -18,9 +25,25 @@ body {
     flex: 0 1 auto;
 }
 
+.flex-container2 div {
+    flex: initial;
+}
+
 .flex-container a {
     background-color: #282828;
     text-decoration: none;
+}
+.flex-container2 a {
+    background-color: #282828;
+    text-decoration: none;
+}
+.flex-container2 footer {
+    text-align: center;
+    font-size: large;
+    background-color: #282828;
+    color: #ffffff;
+    border-radius: 0px 0px 25px 25px;
+    padding: 20px;
 }
 
 .movietitle {
@@ -33,7 +56,7 @@ body {
 }
 
 .movietitle p {
-    display: inline-flex;
+    display: block;
 }
 
 img.movie {
